--- a/platform/android/res/values/customtheme.xml
+++ b/platform/android/res/values/customtheme.xml
@@ -4,11 +4,27 @@
         <!-- Depending on the parent theme, this may be called android:windowActionBar instead of windowActionBar -->
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+        <item name="android:editTextStyle">@style/Widget.Styled.EditText</item>
+        <!-- AppCompat Compatibility -->
+        <item name="windowActionBar">false</item>
+    </style>
+
+    <style name="Theme.Titanium" parent="@style/Theme.Bootstrap">
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:editTextStyle">@style/Widget.Styled.EditText</item>
+        <!-- AppCompat Compatibility -->
+        <item name="windowActionBar">false</item>
     </style>
 
     <style name="Theme.Bootstrap.Translucent" parent="@style/Theme.AppCompat.Translucent">
         <!-- Depending on the parent theme, this may be called android:windowActionBar instead of windowActionBar -->
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
+    </style>
+
+    <style name="Widget.Styled.EditText" parent="@android:style/Widget.EditText">
+        <item name="android:textCursorDrawable">@null</item>
+        <item name="android:textColor">#000000</item>
     </style>
 </resources>
